# tripsniper1

./: README.md
tripsniper-main/: Dockerfile  README.md  ignored.db  pyproject.toml
tripsniper-main/scripts/: demo_amadeus.py
tripsniper-main/src/trip_sniper/: __init__.py  models.py  pipeline.py  scheduler.py
tripsniper-main/src/trip_sniper/fetchers/: __init__.py  amadeus.py  booking.py  booking_rapidapi18.py  skyscanner.py
tripsniper-main/src/trip_sniper/scoring/: features.py  steal_score.py
tripsniper-main/src/trip_sniper/service/: app.py
tripsniper-main/test_stubs/: httpx_stub.py  requests_stub.py
tripsniper-main/test_stubs/fastapi/: __init__.py  testclient.py
tripsniper-main/test_stubs/fastapi/middleware/: __init__.py  cors.py
tripsniper-main/test_stubs/sqlalchemy_stub/: __init__.py
tripsniper-main/test_stubs/sqlalchemy_stub/ext/declarative/: __init__.py
tripsniper-main/test_stubs/sqlalchemy_stub/orm/: __init__.py
tripsniper-main/tests/: __init__.py  conftest.py  test_amadeus_fetcher.py  test_async_fetchers.py  test_booking_fetcher.py  test_booking_rapidapi18.py  test_booking_rapidapi18_fetcher.py  test_features.py  test_models.py  test_pipeline.py  test_service.py  test_skyscanner_fetcher.py
